--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         }
     },
     "require": {
-        "php-64bit": "^7.4"
+        "php-64bit": "^7.4|^8.0",
+        "ext-gmp": "*",
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
