--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php-64bit": "^7.4|^8.0",
         "ext-gmp": "*",
-        "mediagone/common-types": "^0.4"
+        "mediagone/types-common": "^0.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
